old home page and new content

--- a/app/views/identities/new.html.erb
+++ b/app/views/identities/new.html.erb
@@ -11,7 +11,8 @@
       </ul>
     </div>
 <% end %>
-<center><h3>Create Account</h3></center>
+<center><h3>Create Account</h3>
+<p>You will need the ID of a referer to sign up. If you don't have one, <%= link_to 'ask us for one.', static_help_path %></p></center>
 <hr class="soften"></hr>
 <%= render :partial => 'form' %><br />
 <hr class="soften"></hr>
@@ -21,17 +22,54 @@
 	<section>
 <div class="accounts">
 <h2><center><span class="label label_package_1">Platinum</span><center></h2>
-<p>as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncov</p>
+<h4>Member Benefits:</h4>
+<ul>
+  <li style="font-weight:bold;">Receive $50 for each platinum representative referred</li>
+  <li>Licenced to buy all products at wholesale</li>
+  <li>Free Website</li>
+  <li>Free shipping on orders with two or more packs of hair</li>
+  <li>One time sign up fee</li>
+  <li>No monthly fee</li>
+  </ul>
+
+  <dl>
+<dt>Sign a Free Account</dt>
+<dd>-> Receive the difference between wholesale and retail price, minus 10% (wholesale-retail-10%= payout)</dd>
+<dd>-> Licensed to sign up unlimited numbers of Preferred Customers (free)</dd><br />
+<dt>Sign a Platinum/Gold Account</dt>
+<dd>-> $4.00 for every pack of hair bought or sold by the 1st generation (ex. 100 packs of hair sold X $4.00 = $400.00)</dd>
+<dd>-> $1.00 for every pack of hair sold if they are in the reps. 2nd generation (100 pack X $1.00 = 100.00)</dd>
+  </dl>
+
+
+    <p style="font-weight:bold;">Only Platinum Representive ($299.00) are licensed to sign up Platinum and Gold Representive and Preferred Customers. </p>
+    <p><h2><center>$299.99</center></h2></p>
 
 </div>
 <div class="accounts">
 <h2><center><span class="label label_package_2">Gold</span></center></h2>
-<p>as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncov</p>
+<h4>Member Benefits:</h4>
+<ul>
+  <li>Licenced to buy all products at wholesale</li>
+  <li>Free Website</li>
+  <li>Free shipping on orders with two or more packs of hair</li>
+  <li>Licensed to sell all BPBC products</li>
+  <li>One time sign up fee</li>
+  <li>No monthly fee</li>
+  </ul>
+  <p><h2><center>$99.99</center></h2></p>
 
 </div>
 <div class="accounts">
 <h2><center><span class="label label_package_3">Free</span></center></h2>
-<p>as opposed to using 'Content here, content here', making it look like readable English. Many desktop publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search for 'lorem ipsum' will uncov</p>
+<h4>Member Benefits:</h4>
+<ul>
+  <li>Allowed to purchase BPBC products at our reduce retail price (an additonal %10 discount)</li>
+  <li>Free Website</li>
+  <li>Free shipping on orders with two or more packs of hair</li>
+  <li>No sign up cost</li>
+  </ul>
+  <p><h2><center>Free</center></h2></p>
 
 
 </div>
