--- a/app/views/static/help.html.erb
+++ b/app/views/static/help.html.erb
@@ -1,4 +1,20 @@
-<div class="page-header">
-  <h1>Static#help</h1>
-</div>
-<p>Find me in app/views/static/help.html.erb</p>
+<% content_for :nav_links do %>
+    <div class="nav-collapse">
+      <ul class="nav pull-right">
+				<% if current_user %>
+				<li class="divider-vertical"></li>	
+        	<li><%= link_to "Welcome #{current_user.name}", my_account_path %></li>	
+        	<% else %>
+        	<li class="divider-vertical"></li>	
+        	<li><%= link_to 'Sign In', login_path %></li>
+        	<li class="divider-vertical"></li>	
+  			<li><%= link_to 'Sign Up', new_identity_path %></li>
+        <% end %>
+		<li class="divider-vertical"></li>		
+          <li><%= link_to 'About', static_about_path %></li>
+        <li class="divider-vertical"></li>
+        <li><%= link_to 'Help', static_help_path %></li>
+        <li class="divider-vertical"></li>			
+      </ul>
+    </div>
+<% end %>
