--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -1,4 +1,43 @@
-<div class="page-header">
-  <h1>Static#home</h1>
-</div>
-<p>Find me in app/views/static/home.html.erb</p>
+<div style="background-image: url(assets/side4.gif); margin-top: -60px;">
+
+      <div style="width: 936px; margin: 0 auto; background-color: #fff;">
+      	<div style="height:282px;">
+      		<div style="float:left; width:40%;"><img src="assets/header3.gif"></div>
+      		<div style="float:right; width:60%;text-align:center;">
+      			<div style="margin-left:80px; margin-bottom:40px; padding-top:20px;">
+      <ul class="nav nav-pills">
+  <li class="active">
+    <a href="#">Home</a>
+  </li>
+  <li><%= link_to 'Back Office', login_path %></li>
+  <li><%= link_to 'Sign Up', new_identity_path %></li>
+  <li><%= link_to 'Help', static_help_path %></li>
+  <li><%= link_to 'About', static_about_path %></li>
+</ul></div>
+      			<p style="font-weight:bold;"><font face="Impact" size="6">Back Pride<br />Beauty Corp.</font><p>
+
+      			</div>
+      	</div>
+      	<div style="text-align:center;">
+      		<img border="0" src="assets/areyoupaying.gif" width="905" height="59"></h1>
+            <p align="center"><font face="Impact" size="5">Let us show you how 
+            to buy 100% Indian Remy Hair<br /><br />
+            </font><font color="#FF0000" face="Impact" size="6">At Wholesale 
+            Cost!</font></p>
+            <p align="center"><font face="Impact" size="4">When: July 22, 2012<br>
+            Time: 2:30 P.M.<br>
+            Location: Greater Grace 23500 W.<br>
+            Seven Mile Rd, Detroit, Michigan 48219</font></p>
+            <p align="center"><font face="Impact" size="4">1-800-932-3342</font></p>
+            <p align="center"><font face="Impact" size="4">Contact Us At:<a href="mailto:deborahglass77@gmail.com?subject=Information"> info@blackpridebeauty.com</a></font></p>
+            <p align="center"><font face="Impact" size="4">
+            www.blackpridebeauty.com</font>
+
+      	</div>
+<div style=""><img border="0" src="assets/footer.gif" width="910" height="228"></div>
+
+
+
+
+
+      </div></div>
