--- a/app/views/identities/new.html.erb
+++ b/app/views/identities/new.html.erb
@@ -4,7 +4,7 @@
       	<li class="divider-vertical"></li>
         <li><%= link_to 'About', static_about_path %></li>
         <li class="divider-vertical"></li>
-        <li><%= link_to 'Help', static_help_path %></li>
+        <li><%= link_to 'Help', contact_path %></li>
         <li class="divider-vertical"></li>
 		<li><%= link_to 'Sign In', login_path %></li>
 		<li class="divider-vertical"></li>
