--- a/app/views/password_resets/new.html.erb
+++ b/app/views/password_resets/new.html.erb
@@ -1,9 +1,11 @@
+
+<center>
 <h1>Reset Password</h1>
 
 <%= form_tag password_resets_path, :method => :post do %>
   <div class="field1">
-    <%= label_tag :email %>
-    <%= text_field_tag :email, params[:email] %>
+    <%= text_field_tag :email, params[:email], placeholder: "Enter Your Account Email" %>
   </div>
-  <div class="actions1"><%= submit_tag "Reset Password" %></div>
+  <div class="actions1"><%= submit_tag "Reset Password", class: 'btn btn-large btn-info' %></div>
 <% end %>
+</center>
