--- a/app/views/identities/new.html.erb
+++ b/app/views/identities/new.html.erb
@@ -12,7 +12,7 @@
     </div>
 <% end %>
 <center><h3>Create Account</h3>
-<p>You will need the ID of a referer to sign up. If you don't have one, <%= link_to 'ask us for one.', static_help_path %></p></center>
+<p>You will need the ID of a referer to sign up. If you don't have one, <%= link_to 'ask us for one.', contact_path %></p></center>
 <hr class="soften"></hr>
 <%= render :partial => 'form' %><br />
 <hr class="soften"></hr>
