added missing responsive

--- a/app/views/users/edit.html.erb
+++ b/app/views/users/edit.html.erb
@@ -1,4 +1,5 @@
 <% content_for :nav_links do %>
+<div class="nav-collapse">
 <ul class="nav">
 	<li class="divider-vertical"></li>
 	<li><%= link_to 'Account Home', my_account_path %></li>
@@ -20,7 +21,7 @@
 		<li><%= link_to 'Your Payments', payment_notifications_path %></li>
 	</ul>
 </div>
-
+</div>
 <% end %>
 
 
