--- a/app/views/accounts/show.html.erb
+++ b/app/views/accounts/show.html.erb
@@ -1,4 +1,5 @@
 <% content_for :nav_links do %>
+<div class="nav-collapse">
 <ul class="nav">
 	<li class="divider-vertical"></li>
 	<li><%= link_to 'Account Home', my_account_path %></li>
@@ -19,6 +20,7 @@
 		<li><%= link_to "Edit Account", edit_user_path(current_user) %></li>
 		<li><%= link_to 'Your Payments', payment_notifications_path %></li>
 	</ul>
+</div>
 </div>
 
 <% end %>
