--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -4,19 +4,7 @@
       	<div style="height:282px;">
       		<div style="float:left; width:40%;"><img src="assets/logo.jpg"></div>
       		<div style="float:right; width:60%;text-align:center;">
-      			<div style="margin-left:80px; margin-bottom:40px; padding-top:20px;">
-      <ul class="nav nav-pills">
-  <li class="active">
-    <a href="#">Home</a>
-  </li>
-  <li><%= link_to 'Back Office', login_path %></li>
-  <li><%= link_to 'Sign Up', new_identity_path %></li>
-  <li><%= link_to 'Help', contact_path %></li>
-  <li><%= link_to 'About', static_about_path %></li>
-</ul></div>
-      			<p style="font-weight:bold;"><font face="Impact" size="6">Back Pride<br />Beauty Corp.</font><p>
-              <%= link_to "Learn More", static_about_path, class: "btn btn-large btn-info" %>
-
+            <div style=""><p style="padding-top:100px; line-height:1.3;"><font color="#FF0000" face="Impact" size="6">Coming Soon...<br />To a City Near You</font><p></div>
       			</div>
       	</div>
       	<div style="text-align:center;">
@@ -29,7 +17,7 @@
             Time: 2:30 P.M.<br>
             Location: Greater Grace 23500 W.<br>
             Seven Mile Rd, Detroit, Michigan 48219</font></p>
-            <p align="center"><font face="Impact" size="4">1-800-932-3342</font></p>
+            <p align="center"><font face="Impact" size="4">1-866-281-6249</font></p>
             <p align="center"><font face="Impact" size="4">Contact Us At:<a href="mailto:deborahglass77@gmail.com?subject=Information"> info@blackpridebeauty.com</a></font></p>
             <p align="center"><font face="Impact" size="4">
             www.blackpridebeauty.com</font>
