--- a/app/views/static/home.html.erb
+++ b/app/views/static/home.html.erb
@@ -2,7 +2,7 @@
 
       <div style="width: 936px; margin: 0 auto; background-color: #fff;">
       	<div style="height:282px;">
-      		<div style="float:left; width:40%;"><img src="assets/logo.jpg"></div>
+      		<div style="float:left; width:40%;"><img src="assets/logo.jpg" width="374px"></div>
       		<div style="float:right; width:60%;text-align:center;">
             <div style=""><p style="padding-top:100px; line-height:1.3;"><font color="#FF0000" face="Impact" size="6">Coming Soon...<br />To a City Near You</font><p></div>
       			</div>
