--- a/app/views/accounts/_network.html.erb
+++ b/app/views/accounts/_network.html.erb
@@ -5,6 +5,7 @@
 							<table class="table network">
 								<tr>
 									<th>ID</th>
+									<th>Name</th>
 									<th>Earnings</th>
 								</tr>
 								<% @account.first_generation.each do |item| -%>
@@ -13,6 +14,9 @@
 										  <span class="label label_package_<%= item.package %>">
 												<%= link_to item.referer_id, user_modal_path(:user_id => item.referer_id), {:remote => true, :class => 'network-modal-link'} %>
 										  </span>
+										</td>
+										<td>
+											<%= item.name %>
 										</td>
 										<td>$<%= @account.earnings_from_user item%>.00</td>
 									</tr>	
