--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,10 @@
 <![endif]-->
 
   <%= stylesheet_link_tag    "application" %>
+  <%= stylesheet_link_tag    "bootstrap-buttons" %>
+  <%= stylesheet_link_tag    "bootstrap-generators" %>
+  <%= stylesheet_link_tag    "bootstrap-variables" %>
+
   <%= javascript_include_tag "application" %>
   <%= csrf_meta_tags %>
 </head>
