form view for sign up

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -57,7 +57,7 @@ a.plain_button:hover{
 
 .sign-in{width:30%; margin:0 auto;}
 .sign-up{width:30%; margin:0 auto;}
-.field{width:50%; float:left; text-align:center; margin-bottom:20px;}
+.field{width:50%; float:left; margin-bottom:20px;}
 .accounts{width:30.33%; float:left; padding: 0 1.5% 0 1.5%;}
 .accounts-container{width:80%; margin: 0 auto;}
 .accounts-container-inside{width:100%; margin: 0 auto;}
