--- a/app/views/identities/new.html.erb
+++ b/app/views/identities/new.html.erb
@@ -14,7 +14,12 @@
 <center><h3>Create Account</h3>
 <p>You will need the ID of the person you were refered by. If you don't have one, <%= link_to 'ask us for one.', contact_path %></p></center>
 <hr class="soften"></hr>
+<div class="row-fluid">
+  <div class="span2">&nbsp;</div>
+<div class="span8">
 <%= render :partial => 'form' %><br />
+</div>
+</div>
 <hr class="soften"></hr>
 <center><h2>Choose between the following 3 account types</h2></center><br />
 
